[gd_scene load_steps=2 format=3 uid="uid://d4m5k3orrstal"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_rtlvu"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtlvu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -206.5
offset_bottom = 206.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "Dies ist ein Newsevent..."

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Dies ist ein Post..."

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Dies ist ein Post..."

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Dies ist ein Post..."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -50.0
offset_right = 225.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.356863, 0.239216, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.674659, 0.211513, 0.532674, 1)

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.668058, 0.296282, 0.19046, 1)

[node name="ColorRect4" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.298806, 0.480483, 0.235794, 1)

[node name="ColorRect5" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.705882, 0.580392, 0.345098, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Views"

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "12"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_pressed"]
